# frosty-pine

./: .gitignore  Cargo.toml  README.md  Session.vim
features/cross_platform/: Cargo.toml  flutter_rust_bridge.yaml  pubspec.yaml
features/cross_platform/assets/i18n/: en_US.yaml
features/cross_platform/flutter_application/: Session.vim  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
features/cross_platform/flutter_application/lib/: main.dart
features/cross_platform/flutter_application/linux/: rust.cmake
features/cross_platform/lib/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  main.dart
features/cross_platform/linux/: CMakeLists.txt
features/cross_platform/linux/flutter/: generated_plugins.cmake
features/cross_platform/linux/runner/: my_application.cc
features/cross_platform/rust_builder/android/: build.gradle
features/cross_platform/rust_builder/ios/: rust_lib_frosy_pine.podspec
features/cross_platform/rust_builder/macos/: rust_lib_frosy_pine.podspec
features/cross_platform/rust_builder/windows/: CMakeLists.txt
features/cross_platform/src/: adapters.rs  api.rs  frb_generated.rs  lib.rs
features/cross_platform/src/adapters/: models.rs  presenters.rs  rust.rs  translations.rs
features/cross_platform/src/api/: brand_controller.rs  init.rs  models.rs  store.rs
features/cross_platform/src/application/: base.rs
features/cross_platform/test/: widget_test.dart
features/expense_tracking_core/: Cargo.toml
features/expense_tracking_core/src/: lib.rs
features/expense_tracking_core/src/data/: repositories.rs
(+200 files in other folders)
