[package]
name = "rust_lib_frosy_pine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
expense_tracking = { path = "../expense_tracking" }
in_memory_storage = { path = "../in_memory_storage" }
flutter_rust_bridge = "=2.9.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
